--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@
 /[Aa]ssets/Plugins/Editor/JetBrains*
 
 # Visual Studio cache directory
-.vs/
+/.vs/
+/.vscode/
+/.idea/
+/.vsconfig
 
 # Gradle cache directory
 .gradle/
